--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:15.2-alpine
@@ -5,9 +7,19 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=Newpassword
     ports:
-      - '5432:5432'
+      - '5433:5432'
     volumes: 
       - postgres-data:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4:6.20
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - '5050:80'
+    depends_on:
+      - db
 
 volumes:
   postgres-data:
